# camera_tracking

./: CMakeLists.txt  README.md
catchtests/: maze_cv_tests.cpp
config/: agent_profile.config  camera_associations.config  cameras_parameters.config  coordinate_solver.config  experiment.config  lights_off.config  lights_on.config
config/camera_homographies/: camera1_to_ground_plane.txt  camera2_to_ground_plane.txt  camera3_to_ground_plane.txt  camera4_to_ground_plane.txt  image_size.txt
config/camera_intrinsics_1024x1024_2/: camera_1.json
config/video_config/: camera3.fmt  camera_dark.fmt  new_camera.fmt  new_camera2.fmt  new_camera3.fmt  new_white_light.fmt  red_light.fmt  room_light_binning.fmt  room_light_charuco.fmt  room_light_charuco2.fmt  test.fmt  trigger.fmt  trigger2.fmt  trigger3.fmt
include/: agent_profile.h  camera.h  cell_association.h  controller.h  core.h  detection.h  image_processing.h  image_stitching.hpp  tracking.h  util.h  utility_functions.hpp  video_recorder.hpp
setup/: fix_pixci_drivers  install_all  install_cuda  install_opencv  install_prerequisites  install_tracking  install_xcap  install_xclib
src/: agent_profile.cpp  agent_tracking.cpp  camera.cpp  cell_association.cpp  charucoMarkerdetection.cpp  controller.cpp  detection.cpp  image_processing.cpp  main.cpp  record_samples.cpp  record_samples_main.cpp  simple_capture.cpp  tracking.cpp  util.cpp  utility_functions.cpp
tools/: cameraCalibration2.py  cameraCalibration3.py  cameraCalibration4.py  capture.cpp
